--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     testImplementation 'org.projectlombok:lombok'
     implementation 'io.jsonwebtoken:jjwt:0.9.1' //자바 jwt 라이브러리
     implementation 'javax.xml.bind:jaxb-api:2.3.1' //xml 문서와 java 객체 간의 매핑을 자동화
+
+    //OAuth2를 사용하기 위한 스타터 추가
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 tasks.named('test') {
